k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: musicarr
  labels:
    app.kubernetes.io/name: musicarr
