k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musicarr
  namespace: musicarr
  labels:
    app.kubernetes.io/name: musicarr
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: musicarr
    app.kubernetes.io/component: api
