k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musicarr
  namespace: musicarr
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: musicarr.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: musicarr
                port:
                  number: 80
